--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "4.0.3",
     "rss-parser": "^3.12.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webnative": "^0.26.1-alpha2"
   },
   "scripts": {
     "start": "react-scripts start",
