--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-scripts": "4.0.3",
     "rss-parser": "^3.12.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "y-indexeddb": "^9.0.6",
+    "yjs": "^13.5.12"
   },
   "scripts": {
     "start": "react-scripts start",
